# KSVGRestyle

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pylsp.conf.json  pyproject.toml
.github/workflows/: bump_version.yml  check.yml  deploy.yml  pr_master_test_lint.yml  readme_coverage.yml
colour_svg/: __main__.py  console.py
colour_svg/handlers/: theme_parser.py
hooks/: __main__.py
ksvg_restyle/: __main__.py  command.py  console.py  handlers.py  state.py
ksvg_restyle/cli/: __init__.py  cmd.py  env.py  handlers.py
ksvg_restyle/core/: __init__.py  builder.py  wrappers.py
ksvg_restyle/core/parsers/: __init__.py  svg.py  theme.py
ksvg_restyle/handlers/: theme_parser.py
ksvg_restyle/parsers/: svg.py  theme.py
ksvg_restyle/templates/: stylesheet.jinja2
test/: base.py  conftest.py
test/fixtures/: __init__.py  color_scheme.py  general.py  svg.py
test/fixtures/data/: __init__.py  loader.py
test/fixtures/data/color_scheme/: colors.json.in  style.css.in
test/fixtures/data/general/: styled.xml.in  styled.xml.out  transform.xsl.in
test/fixtures/data/svg/: background_copy.svgz  transformed.xml.out
test/unit/core/: test_builder.py  test_wrappers.py
test/unit/core/parsers/: test_parsers_svg.py  test_parsers_theme.py
tests/: utils.py
tests/mock_files/: loader.py
tests/mock_files/share/: theme.colors
tests/unit/: conftest.py  test_handlers_theme_parser.py  test_parsers_svg.py  test_parsers_theme.py
